syntax = "proto3";
package payment.service.v1;
option go_package = "gen/go/proto";

import "google/api/annotations.proto";

message TransferRequest {
  string from = 1;
  string to = 2;
  float amount = 3;
}

message TransferResponse {
  string transaction_id = 1;
  int64 timestamp = 2;
  string status = 3;
  string from = 4;
  string to = 5;
  float amount = 6;
}

service PaymentService {
  rpc Transfer(TransferRequest) returns (TransferResponse) {
    option (google.api.http) = {
      post: "/v1/payment/transfer"
      body: "*"
    };
  }
}